My contribution for HW1
added to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <body>
     <h1>Welcome to Applied Programming Languages</h1><br />
+    <h2>My contribution</h2><br>
 	This is some text I have added.
 
 
